Fix summaryDiv gap / padding

--- a/style.css
+++ b/style.css
@@ -64,9 +64,10 @@ main  {
 }
 
 #summaryDiv  {
-  grid-column: 1;
   grid-area: 1 / 1 / 3 / 2;
   display: flex;
+  gap: 3.6px;
+  padding: 5px;
   flex-direction: column;
   justify-self: center;
   align-self: center;
@@ -79,7 +80,6 @@ main  {
 
 #summaryDiv p {
   margin: 0;
-  padding: 5px;
 }
 
 /* Minimal table styling */
